[gd_scene load_steps=8 format=3 uid="uid://bf52qdwd17p8u"]

[ext_resource type="Shader" uid="uid://wpdbogbbxu46" path="res://Shaders/hsv_outline.gdshader" id="1_2ebrb"]
[ext_resource type="Script" uid="uid://dlq227j5v3enj" path="res://Scripts/dres_passenger.gd" id="1_kufso"]
[ext_resource type="Texture2D" uid="uid://cbg17ev8xuusa" path="res://Assets/Sprites/ProblematicPassangers/Dres_sit.png" id="2_kufso"]
[ext_resource type="AudioStream" uid="uid://cxq7gtrtgujof" path="res://Assets/Music/hiphop_troubleguy_loop.mp3" id="4_1sdhw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_a5ttb"]
shader = ExtResource("1_2ebrb")
shader_parameter/hue_shift_deg = 0.0
shader_parameter/saturation = 1.0
shader_parameter/value = 1.0
shader_parameter/alpha = 1.0
shader_parameter/clr = Color(0, 0, 0, 1)
shader_parameter/type = 1
shader_parameter/thickness = 1.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lyrvh"]
size = Vector2(28.1875, 22.1333)

[sub_resource type="CircleShape2D" id="CircleShape2D_1sdhw"]
radius = 68.0084

[node name="DresPassenger" type="Area2D" groups=["Passenger"]]
scale = Vector2(4, 3.75)
collision_layer = 4
collision_mask = 4
script = ExtResource("1_kufso")

[node name="TexContainer" type="SubViewportContainer" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_a5ttb")
offset_left = -28.5
offset_top = -42.4
offset_right = 35.5
offset_bottom = 27.6
metadata/_edit_use_anchors_ = true

[node name="Sprites" type="SubViewport" parent="TexContainer"]
transparent_bg = true
handle_input_locally = false
canvas_item_default_texture_filter = 0
size = Vector2i(64, 70)
render_target_update_mode = 4

[node name="Sprite2D" type="Sprite2D" parent="TexContainer/Sprites"]
position = Vector2(35.5, 32.2666)
texture = ExtResource("2_kufso")

[node name="InteractionArea" type="CollisionShape2D" parent="."]
position = Vector2(4.25, 26.6667)
shape = SubResource("RectangleShape2D_lyrvh")

[node name="InteractLabel" type="Label" parent="."]
visible = false
offset_left = -18.75
offset_top = -42.9333
offset_right = 213.25
offset_bottom = -0.933334
scale = Vector2(0.2, 0.2)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 10
theme_override_font_sizes/font_size = 30
text = "[E] Porozmawiaj"
metadata/_edit_use_anchors_ = true

[node name="Boombox" type="AudioStreamPlayer2D" parent="."]
rotation = 2.0944
stream = ExtResource("4_1sdhw")
volume_db = 13.0
autoplay = true
max_distance = 500.0
bus = &"Music"
parameters/looping = true

[node name="MusicArea" type="Area2D" parent="."]
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="MusicArea"]
position = Vector2(4.5, 3.2)
shape = SubResource("CircleShape2D_1sdhw")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="area_entered" from="MusicArea" to="." method="_on_music_area_area_entered"]
[connection signal="area_exited" from="MusicArea" to="." method="_on_music_area_area_exited"]
